--- a/Aula12ex/Ex14/estilo.css
+++ b/Aula12ex/Ex14/estilo.css
@@ -1,7 +1,7 @@
 @charset"UTF-8";
 
 body{
-    background: rgb(105, 105, 247);
+    background: rgb(72, 185, 223);
     font: normal 15pt arial;
 }
 
@@ -17,6 +17,11 @@ section{
     width: 500px;
     margin: auto;
     box-shadow: 0px 0px 5px rgb(0, 0, 0);
+}
+
+div{
+    text-align: center;
+    padding: 8px;
 }
 
 footer{
