--- a/Aula12ex/Ex15/estilo.css
+++ b/Aula12ex/Ex15/estilo.css
@@ -24,3 +24,21 @@ footer{
     text-align: center;
     font-style: italic;
 }
+
+input[type=number]{
+    border: none;
+    border-radius: 5px;
+    width: 100px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.308);
+    margin-left: 5px;
+    padding: 3px;
+}
+
+input[type=button]{
+    padding: 5px;
+    width: 200px;
+    border: none;
+    background-image: linear-gradient(to right, lightblue, lightpink);
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.705);
+    border-radius: 5px;
+}
